--- a/files.html
+++ b/files.html
@@ -59,7 +59,7 @@
           <li class="m-doc-collapsible">
             <a href="#" onclick="return toggle(this)">dir</a> <a href="dir_6845d4c7af1a0a99add50de30b674562.html" class="m-doc">shared</a> <span class="m-doc"><span></span></span>
             <ul class="m-doc">
-              <li>file <a href="shared_8h.html" class="m-doc">shared.h</a> <span class="m-doc"><span></span></span></li>
+              <li>file <a href="shared_8hpp.html" class="m-doc">shared.hpp</a> <span class="m-doc"><span></span></span></li>
             </ul>
           </li>
           <li>file <a href="about_8dox.html" class="m-doc">about.dox</a> <span class="m-doc"><span></span></span></li>
