--- a/shared_8hpp.html
+++ b/shared_8hpp.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>shared/shared.h file | shared</title>
+  <title>shared/shared.hpp file | shared</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,600,600i%7CSource+Code+Pro:400,400i,600" />
   <link rel="stylesheet" href="m-dark+documentation.compiled.css" />
   <link rel="icon" href="favicon-dark.png" type="image/png" />
@@ -49,7 +49,7 @@
     <div class="m-row">
       <div class="m-col-l-10 m-push-l-1">
         <h1>
-          <span class="m-breadcrumb"><a href="dir_6845d4c7af1a0a99add50de30b674562.html">shared</a>/</span>shared.h <span class="m-thin">file</span>
+          <span class="m-breadcrumb"><a href="dir_6845d4c7af1a0a99add50de30b674562.html">shared</a>/</span>shared.hpp <span class="m-thin">file</span>
         </h1>
         <p><span></span></p>
         <div class="m-block m-default">
